test_regress/t/t_runflag_errorlimit_bad.out
[0] %Error: t_runflag_errorlimit_bad.v:9: Assertion failed in top.t: One
-Info: t/t_runflag_errorlimit_bad.v:9: Verilog $stop, ignored due to +verilator+error+limit
[0] %Error: t_runflag_errorlimit_bad.v:10: Assertion failed in top.t: Two
[0] %Error: t_runflag_errorlimit_bad.v:11: Assertion failed in top.t: Three
%Error: t/t_runflag_errorlimit_bad.v:11: Verilog $stop
Aborting...
